# gardenmap

./: .gitignore  Dockerfile  PROMPTS.md  README.md  docker-compose.yml  gardenmap.py  gardenmap.spec  palette.json  plants.json  pyproject.toml
.github/workflows/: bundle-macos.yml  bundle-windows.yml
gardenmap/: __init__.py  cli.py  garden.json  plants.json  schemas.py  wsgi.py
gardenmap/storage/: __init__.py  json.py  sqlite.py
gardenmap/templates/: index.html  main.js
templates/: index.html  main.js
